Refactor LaunchArgsParser and remove the deprecated sun.misc.Unsafe